Fix wrong size

--- a/2018/2018-04/2018-04-09/source/set10/970x250.css
+++ b/2018/2018-04/2018-04-09/source/set10/970x250.css
@@ -736,7 +736,7 @@
 .text {
   background: url('./images/970x250_text.png') no-repeat center center;
   width: 433px;
-  height: 133px;
+  height: 143px;
   top: 30px;
   left: 17px;
 
